--- a/web/gltf.html
+++ b/web/gltf.html
@@ -12,7 +12,7 @@
     <p>Hello world from Dart!</p>
     
     <div id="sample_container_id">
-      <p id="sample_text_id"></p>
+      <canvas id="container" width="800" height="500" style="border: 1px solid #333333;"></canvas>
     </div>
 
     <script type="application/dart" src="gltf.dart"></script>
