--- a/web/gltf.html
+++ b/web/gltf.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Gltf</title>
-    <link rel="stylesheet" href="gltf.css">
-  </head>
-  <body>
-    <h1>Gltf</h1>
-    
-    <p>Hello world from Dart!</p>
-    
-    <div id="sample_container_id">
-      <canvas id="container" width="800" height="500" style="border: 1px solid #333333;"></canvas>
-    </div>
+<head>
+<meta charset="utf-8">
+<title>Gltf</title>
+<link rel="stylesheet" href="gltf.css">
+</head>
+<body>
+	<h1>Gltf</h1>
 
-    <script type="application/dart" src="gltf.dart"></script>
-    <script src="packages/browser/dart.js"></script>
-  </body>
+	<p>Hello world from Dart!</p>
+
+	<div id="sample_container_id">
+		<canvas id="container" width="800" height="500"
+			style="border: 1px solid #333333;"></canvas>
+	</div>
+
+	<script type="application/dart" src="gltf.dart"></script>
+	<script src="packages/browser/dart.js"></script>
+</body>
 </html>
