--- a/web/gltf.html
+++ b/web/gltf.html
@@ -11,10 +11,7 @@
 
 	<p>Hello world from Dart!</p>
 
-	<div id="sample_container_id">
-		<canvas id="container" width="800" height="500"
-			style="border: 1px solid #333333;"></canvas>
-	</div>
+	<canvas id="container" width="800" height="500" style="border: 1px solid #333333;"></canvas>
 
 	<script type="application/dart" src="gltf.dart"></script>
 	<script src="packages/browser/dart.js"></script>
